# cargo-visualize

./: .rustfmt.toml  CHANGELOG  Cargo.toml  INSTALL.md  README.md  build.rs  dist-workspace.toml
.github/: build-setup.yml
.github/workflows/: publish.yml  release.yml
frontend/: .gitignore  .pnp.cjs  index.html  package.json  tsconfig.json  vite.config.js
frontend/src/: constants.ts  dep-edge.ts  dep-node.ts  dom.ts  info.ts  layouts.ts  main.ts  pure.ts  rel.ts  resize.ts  style.css  tag.ts
src/: assets.rs  cli.rs  dep_info.rs  dto.rs  graph.rs  main.rs  package.rs  routes.rs  util.rs
src/graph/: build.rs
