[package]
name = "cargo-visualize"
version = "2.0.0-alpha.1"
authors = ["Levi Zim <rsworktech@outlook.com>", "Jonas Platte <jplatte@posteo.de>"]
license = "GPL-3.0-or-later"
edition = "2021"
description = "Interactive cargo dependency graph visualization"
repository = "https://github.com/kxxt/cargo-visualize"
readme = "README.md"
categories = ["development-tools::cargo-plugins", "visualization"]
exclude = [".gitignore", ".rustfmt.toml", "*.png"]

[dependencies]
anyhow = "1.0.38"
axum = "0.8.1"
base64 = "0.22.1"
cargo_metadata = "0.19"
cfg-if = "1.0.0"
clap = "4.0.18"
mime_guess = { version = "2.0.5", optional = true }
nanoid = "0.4.0"
open = "5.3.2"
petgraph = { version = "0.7", default-features = false, features = ["stable_graph"] }
rust-embed = "8.6.0"
serde = { version = "1.0.218", features = ["derive"] }
tokio = { version = "1.43.0", features = ["macros"] }
tower-http = { version = "0.6.2", features = ["fs","cors"] }

[features]
default = ["embed", "build-frontend"]
embed = ["dep:mime_guess"]
build-frontend = ["dep:xshell"]

[lints.rust]
rust_2018_idioms = { level = "warn", priority = -1 }
missing_debug_implementations = "warn"
semicolon_in_expressions_from_macros = "warn"
unused_import_braces = "warn"
unused_qualifications = "warn"

[lints.clippy]
branches_sharing_code = "warn"
cloned_instead_of_copied = "warn"
dbg_macro = "warn"
empty_line_after_outer_attr = "warn"
inefficient_to_string = "warn"
macro_use_imports = "warn"
map_flatten = "warn"
mod_module_files = "warn"
mut_mut = "warn"
nonstandard_macro_braces = "warn"
semicolon_if_nothing_returned = "warn"
str_to_string = "warn"
todo = "warn"
unreadable_literal = "warn"
unseparated_literal_suffix = "warn"
wildcard_imports = "warn"

[build-dependencies]
cfg-if = "1.0.0"
xshell = { version = "0.2.7", optional = true }

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
